pyscript.toml fixed

--- a/pyscript.toml
+++ b/pyscript.toml
@@ -1,9 +1,8 @@
 packages = ["numpy", "matplotlib", "scipy"]
 [files]
-"./py/__init__.py" = "./py/__init__.py"
-"./py/validators.py" = "./py/validators.py"
-"./py/probability/__init__.py" = "./py/probability/__init__.py"
-"./py/probability/controller.py" = "./py/probability/controller.py"
-"./py/probability/calculations/__init__.py" = "./py/probability/calculations/__init__.py"
-"./py/probability/calculations/precise.py" = "./py/probability/calculations/precise.py"
-"./py/probability/calculations/simulation.py" = "./py/probability/calculations/simulation.py"
+"py/__init__.py"                          = "./py/__init__.py"
+"py/validators.py"                        = "./py/validators.py"
+"py/probability/__init__.py"              = "./py/probability/__init__.py"
+"py/probability/controller.py"              = "./py/probability/controller.py"
+"py/probability/calculations/__init__.py" = "./py/probability/calculations/__init__.py"
+"py/probability/calculations/precise.py"  = "./py/probability/calculations/precise.py"
